--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2081,8 +2081,8 @@
   "boilerplate.containers.Payroll.Employee.salary.isHours": "المرتب يعتمد علي ساعات العمل",
   "boilerplate.containers.Payroll.Employee.salary.hourPrice": "قيمة الساعة",
   "boilerplate.containers.Payroll.Employee.salary.isNotApplyAttRule": "لا يطبق عليه قواعد الحضور و الانصراف",
-  "boilerplate.containers.Payroll.Employee.salary.isMoneyOvertime": "حساب الوقت الاضافي برصيد اجازات",
-  "boilerplate.containers.Payroll.Employee.salary.isVacationOvertime": "حساب الوقت الاضافي بمقابل مادي",
+  "boilerplate.containers.Payroll.Employee.salary.isMoneyOvertime":"حساب الوقت الاضافي بمقابل مادي"       ,
+  "boilerplate.containers.Payroll.Employee.salary.isVacationOvertime": "حساب الوقت الاضافي برصيد اجازات",
   "boilerplate.containers.Payroll.Employee.salary.hasTransfereAllowance": "حساب بدل انتقال",
   "boilerplate.containers.Payroll.Employee.salary.hasMonthlyBouns": "حافز شهري",
   "boilerplate.containers.Payroll.Employee.salary.incentiveFrom": "حوافز من",
