finish add create questions section into JobAdvertisement page, finish add Exclusionary Questions section in JobAdvertisement public page with remove rquired from issue place and issue date feilds

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2731,6 +2731,11 @@
   "boilerplate.containers.Payroll.recruitment.positionType": "نوع الوظيفة",
   "boilerplate.containers.Payroll.recruitment.male": "ذكر",
   "boilerplate.containers.Payroll.recruitment.createJobAdvertisement": "إنشاء إعلان وظيفة",
+  "boilerplate.containers.Payroll.recruitment.createQuestion": "انشاء سؤال",
+  "boilerplate.containers.Payroll.recruitment.Question": "سؤال",
+  "boilerplate.containers.Payroll.recruitment.Answer": "اجابة",
+  "boilerplate.containers.Payroll.recruitment.TrueAnswer": "الإجابة الصحيحة",
+  "boilerplate.containers.Payroll.recruitment.questionsCardsTitle": "بطاقات الأسئلة",
   "boilerplate.containers.Payroll.recruitment.createEmploymentRequest": "إنشاء طلب توظيف",
   "boilerplate.containers.Payroll.recruitment.viewEmploymentRequest": "عرض طلب التوظيف",
   "boilerplate.containers.Payroll.recruitment.female": "أنثى",
@@ -2855,6 +2860,7 @@
   "boilerplate.containers.Payroll.cv.gender": "النوع",
   "boilerplate.containers.Payroll.cv.uploadCV": "رفع السيرة الذاتية",
   "boilerplate.containers.Payroll.cv.CVUnderReviewing": "السيرة الذاتية قيد المراجعة",
+  "boilerplate.containers.Payroll.cv.ExclusionaryQuestions": "أسئلة اقصائية",
   "boilerplate.containers.Payroll.cv.previewCV": "عرض السيرة الذاتية",
   "boilerplate.containers.Payroll.cv.preview": "معاينة",
   "boilerplate.containers.Payroll.cv.uploadImage": "رفع الصورة",
