--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2701,6 +2701,11 @@
   "boilerplate.containers.Payroll.recruitment.createEmploymentRequest": "Create Employment Request",
   "boilerplate.containers.Payroll.recruitment.viewEmploymentRequest": "View Employment Request",
   "boilerplate.containers.Payroll.recruitment.createJobAdvertisement": "Create Job Advertisement",
+  "boilerplate.containers.Payroll.recruitment.createQuestion": "create Question",
+  "boilerplate.containers.Payroll.recruitment.Question": "Question",
+  "boilerplate.containers.Payroll.recruitment.Answer": "Answer",
+  "boilerplate.containers.Payroll.recruitment.TrueAnswer": "True Answer",
+  "boilerplate.containers.Payroll.recruitment.questionsCardsTitle": "Questions Cards",
   "boilerplate.containers.Payroll.recruitment.any": "Any",
   "boilerplate.containers.Payroll.recruitment.age": "Age",
   "boilerplate.containers.Payroll.recruitment.year": "Year",
@@ -2822,6 +2827,7 @@
   "boilerplate.containers.Payroll.cv.uploadCV": "Upload CV",
   "boilerplate.containers.Payroll.cv.preview": "Preview",
   "boilerplate.containers.Payroll.cv.CVUnderReviewing": "Your CV under review",
+  "boilerplate.containers.Payroll.cv.ExclusionaryQuestions": "Exclusionary Questions",
   "boilerplate.containers.Payroll.cv.previewCV": "Preview CV",
   "boilerplate.containers.Payroll.cv.uploadImage": "Upload Image",
   "boilerplate.containers.Payroll.cv.personalIDInfo": "Personal ID Info",
