--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2766,6 +2766,7 @@
   "boilerplate.containers.Payroll.recruitment.confirm": "Confirm",
   "boilerplate.containers.Payroll.recruitment.viewApplicationForm": "View Application Form",
   "boilerplate.containers.Payroll.recruitment.updateStatus": "Update Status",
+  "boilerplate.containers.Payroll.recruitment.aiEvaluation": "AI Evaluation",
   "boilerplate.containers.Payroll.recruitment.sendRejectMail": "Send Reject Mail",
   "boilerplate.containers.Payroll.recruitment.downloadCV": "Download CV",
   "boilerplate.containers.Payroll.recruitment.graduationGrade": "Graduation Grade",
@@ -2881,6 +2882,8 @@
   "boilerplate.containers.Payroll.assessment.competencyName": "Competency Name",
   "boilerplate.containers.Payroll.assessment.totalGrade": "Total Grade",
   "boilerplate.containers.Payroll.assessment.actions": "Actions",
+  "boilerplate.containers.Payroll.AiEvaluationResult": "AI Evaluation Result",
+  "boilerplate.containers.Payroll.evaluate": "New Evaluation",
   "boilerplate.containers.Payroll.assessment.save": "Save",
   "boilerplate.containers.Payroll.assessment.addNewEmployee": "Add New Employee",
   "boilerplate.containers.Payroll.assessment.close": "Close",
