--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2738,7 +2738,7 @@
   "boilerplate.containers.Payroll.recruitment.Question": "سؤال",
   "boilerplate.containers.Payroll.recruitment.Answer": "اجابة",
   "boilerplate.containers.Payroll.recruitment.TrueAnswer": "الإجابة الصحيحة",
-  "boilerplate.containers.Payroll.recruitment.questionsCardsTitle": "بطاقات الأسئلة",
+  "boilerplate.containers.Payroll.recruitment.questionsCardsTitle": "اسئلة اقصائية",
   "boilerplate.containers.Payroll.recruitment.createEmploymentRequest": "إنشاء طلب توظيف",
   "boilerplate.containers.Payroll.recruitment.viewEmploymentRequest": "عرض طلب التوظيف",
   "boilerplate.containers.Payroll.recruitment.female": "أنثى",
