finish fix print and table  in DetailedAttendanceReportTemplate page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2864,7 +2864,7 @@
   "boilerplate.containers.Payroll.cv.gender": "النوع",
   "boilerplate.containers.Payroll.cv.uploadCV": "رفع السيرة الذاتية",
   "boilerplate.containers.Payroll.cv.CVUnderReviewing": "السيرة الذاتية قيد المراجعة",
-  "boilerplate.containers.Payroll.cv.ExclusionaryQuestions": "أسئلة اقصائية",
+  "boilerplate.containers.Payroll.cv.ExclusionaryQuestions": "اسئلة اقصائية",
   "boilerplate.containers.Payroll.cv.previewCV": "عرض السيرة الذاتية",
   "boilerplate.containers.Payroll.cv.preview": "معاينة",
   "boilerplate.containers.Payroll.cv.uploadImage": "رفع الصورة",
