--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -310,6 +310,7 @@
   "boilerplate.components.Header.action.fullScreen": "Full Screen",
   "boilerplate.components.Header.action.fullscreen": "Full Screen",
   "boilerplate.components.Header.action.exitFullScreen": "Exit Full Screen",
+  "boilerplate.components.Header.action.askNova": "Ask Nova",
   "boilerplate.components.Header.action.lamp": "Turn Dark/Light",
   "boilerplate.components.Header.action.guide": "Show Guide",
   "boilerplate.components.Header.search": "Search Ui",
@@ -657,6 +658,7 @@
   "boilerplate.containers.Payroll.organizationTree": "Organization Tree",
   "boilerplate.containers.Payroll.close": "Close",
   "boilerplate.containers.Payroll.cancel": "Cancel",
+  "boilerplate.containers.Payroll.send": "Send",
   "boilerplate.containers.Payroll.id": "Id",
   "boilerplate.containers.Payroll.trxId": "Trx No",  
   "boilerplate.containers.Payroll.downloadExcel": "Download Excel",
