Solve Vacations error

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2480,7 +2480,7 @@
   "boilerplate.containers.Payroll.vac.GovernmentSickLeaveUpdateTitle": "تعديل إجازة مرضية حكومية",
   "boilerplate.containers.Payroll.vac.reducedFromAnnual": "خصم من السنوي",
   "boilerplate.containers.Payroll.vac.annualBalance": "الرصيد السنوي",
-  "boilerplate.containers.Payroll.vac.postedBalance": "الرصيد المعلن",
+  "boilerplate.containers.Payroll.vac.postedBalance": "الرصيد المرحل",
   "boilerplate.containers.Payroll.vac.annualOpen": "الافتتاح السنوي",
 
   "boilerplate.containers.Payroll.vac.code.GovernmentSickLeaveSetting": "اعدادات الاجازة المرضى الحكومى",
