--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2785,6 +2785,7 @@
   "boilerplate.containers.Payroll.recruitment.jobOffer": "Job Offer",
   "boilerplate.containers.Payroll.recruitment.rejected": "Rejected",
   "boilerplate.containers.Payroll.recruitment.blackList": "Black List",
+  "boilerplate.containers.Payroll.recruitment.blackList2": "Black List",
   "boilerplate.containers.Payroll.recruitment.site": "Site",
   "boilerplate.containers.Payroll.recruitment.home": "Home",
   "boilerplate.containers.Payroll.recruitment.email": "Email",
