--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2869,6 +2869,7 @@
   "boilerplate.containers.Payroll.cv.uploadCV": "رفع السيرة الذاتية",
   "boilerplate.containers.Payroll.cv.CVUnderReviewing": "السيرة الذاتية قيد المراجعة",
   "boilerplate.containers.Payroll.cv.ExclusionaryQuestions": "اسئلة اقصائية",
+  "boilerplate.containers.Payroll.cv.pleaseAnswerTheFollowingQuestion": "يرجى الإجابة على الاسئلة التالية",
   "boilerplate.containers.Payroll.cv.previewCV": "عرض السيرة الذاتية",
   "boilerplate.containers.Payroll.cv.preview": "معاينة",
   "boilerplate.containers.Payroll.cv.uploadImage": "رفع الصورة",
