--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -839,7 +839,7 @@
   "boilerplate.containers.Payroll.attachment": "المرفق",
 
   "boilerplate.containers.Payroll.Actions": "الإجراءات",
-  "boilerplate.containers.Payroll.AiEvaluationResult": "تقييم الذكاء الاصطناعى",
+  "boilerplate.containers.Payroll.AiEvaluationResult": "تقييم نوفا",
   "boilerplate.containers.Payroll.evaluate": "تقييم جديد",
   
   "boilerplate.containers.Payroll.EditHrNotes": "تعديل ملاحظات الموارد البشرية",
@@ -2816,7 +2816,7 @@
   "boilerplate.containers.Payroll.recruitment.fromAge": "السن من",
   "boilerplate.containers.Payroll.recruitment.viewApplicationForm": "عرض نموذج الطلب",
   "boilerplate.containers.Payroll.recruitment.updateStatus": "تحديث الحالة",
-  "boilerplate.containers.Payroll.recruitment.aiEvaluation": "تقييم الذكاء الصطناعى",
+  "boilerplate.containers.Payroll.recruitment.aiEvaluation": "تقييم نوفا",
   "boilerplate.containers.Payroll.recruitment.sendRejectMail": "إرسال بريد بالرفض",
   "boilerplate.containers.Payroll.recruitment.downloadCV": "تحميل السيرة الذاتية",
   "boilerplate.containers.Payroll.recruitment.toAge": "السن الي",
