--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2976,8 +2976,14 @@
   "boilerplate.containers.Payroll.assessment.uploadAr": "Upload Arabic",
   "boilerplate.containers.Payroll.assessment.preview": "Preview",
   "boilerplate.containers.Payroll.assessment.competenciesGuideline": "Competencies Guideline",
-  "boilerplate.containers.Payroll.assessment.rating": "Rating",
+  "boilerplate.containers.Payroll.assessment.rating": "Rating",  
   "boilerplate.containers.Payroll.assessment.performanceAppraisalPurpose": "Performance Appraisal Purpose",
+  "boilerplate.containers.Payroll.assessment.ratingfile": "Rating.pdf",
+  "boilerplate.containers.Payroll.assessment.performancefile": "Performance.pdf",
+  "boilerplate.containers.Payroll.assessment.competencyfile": "Competency.pdf",
+  "boilerplate.containers.Payroll.assessment.competencyArfile": "CompetencyAr.pdf",
+  "boilerplate.containers.Payroll.assessment.fileName": "file Name",
+
   "boilerplate.containers.Payroll.assessment.dateForCompletion": "Date For Completion",
   "boilerplate.containers.Payroll.assessment.notEffective": "Not Effective",
   "boilerplate.containers.Payroll.assessment.arCompetencyName": "Arabic Competency Name",
