FIX: i18n - fix ar missing language key

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -673,7 +673,7 @@
   "boilerplate.containers.Form.Upload.images.title": "تحميل الصور فقط",
   "boilerplate.containers.Form.Upload.title": "رفع",
   "boilerplate.containers.Forms.Required.text": "مطلوب",
-  "boilerplate.containers.LocaleToggle.arEgypt": "العربية (مصر)",
+  "boilerplate.containers.LocaleToggle.ar": "العربية (مصر)",
   "boilerplate.containers.LocaleToggle.arKsa": "العربية (السعودية)",
   "boilerplate.containers.LocaleToggle.en": "English",
   "boilerplate.containers.Payroll.Actions": "الإجراءات",
