--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -673,7 +673,7 @@
   "boilerplate.containers.Form.Upload.images.title": "Upload images only",
   "boilerplate.containers.Form.Upload.title": "Upload",
   "boilerplate.containers.Forms.Required.text": "Required",
-  "boilerplate.containers.LocaleToggle.arEgypt": "العربية (مصر)",
+  "boilerplate.containers.LocaleToggle.ar": "العربية (مصر)",
   "boilerplate.containers.LocaleToggle.arKsa": "العربية (السعودية)",
   "boilerplate.containers.LocaleToggle.en": "󠁥󠁮󠁧󠁿English",
   "boilerplate.containers.Payroll.Actions": "Actions",
